动态代理实现restApi       增加数据结构